2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/engines/dipoleengine.*: New dipole moment engine
	-- needs more work, but displays dipole moments from Gaussian,
	GAMESS and Q-Chem output  with recent OB-trunk.

2008-06-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.cpp: Fixed bug 1968565 -
	orbitals are now cleared correctly along with everything else.

2008-05-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Implemented
	showing and hiding of the preview text - defaults to shown.

	* libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/extensions/templateextension.*: Fixed up the template
	extension so that it would actually compile, added an example minimal
	entry in the CMake file too (commented out).

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/mainwindow.cpp: emit enableEngineSettingsButton(false)
	when you delete an engine. Otherwise when you pressed "Settings...",
	it would segfault.

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/glwidget.cpp, libavogadro/src/toolgroup.cpp,
	avogadro/src/mainwindow.cpp: In windows, use
	QCoreApplication::applicationDirPath() to find the plugins. 
	(fixes #1977338)

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/constraintsdialog.ui: Disable unimplemented
	Save/Load buttons.

	* libavogadro/src/extensions/forcefieldextension.*: Only create new
	dialogs when needed. (in performAction, not in constructor)

	* libavogadro/src/extensions/constraintsdialog.cpp: Small GUI changes
	(min/max values, singleStep, ...)

	* libavogadro/src/extensions/propmodel.cpp: Angle and Torsion
	properties are not editable, don't set writable flag.

	* libavogadro/src/extensions/propextension.*: Only create dialogs
	(views) and models when needed. Call QObject::deleteLater() on both