@@ -1,3 +1,9 @@
+2008-06-03  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/engine.h, libavogadro/src/extension.h,
+	libavogadro/src/tool.h: Bumped our plugin version to 1.1 - should help
+	with bugs 1973909 and 1982102 - warning a make clean is needed.
+
 2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* libavogadro/src/engines/dipoleengine.*: New dipole moment engine
